2017-07-07  NIIBE Yutaka  <gniibe@fsij.org>

	* usb-msc.c (msc_handle_command): Fix command error handling.

2017-07-06  NIIBE Yutaka  <gniibe@fsij.org>

	* build.mk (distclean): Add COPYING.

	* usb-msc.c (msc_handle_command): Handle ATA_16 command
	just like MODE_SENSE6.	Error handling fix.

2017-07-05  NIIBE Yutaka  <gniibe@fsij.org>

	* usb-msc.c [GNU_LINUX_EMULATION] (usb_start_receive): Use
	usb_lld_rx_enable_buf.
	[GNU_LINUX_EMULATION] (EP6_OUT_Callback): No need for rxcpy.
	Use usb_lld_rx_enable_buf.

	* fraucheky.c (fraucheky_setup_endpoints_for_interface): Change
	API.  Support GNU_LINUX_EMULATION.

	* disk-on-rom.c [GNU_LINUX_EMULATION] (msc_scsi_write): Don't
	touch flash.

	* configure (dongdong): Don't output '\'.
	(cluster_map): Output '\' line instead of newline only.

	* build.mk (BFDNAME_OBJ): New.
	(ARG_BFDARCH): New.

2016-06-14  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: Version 0.4.

2016-06-13  Niibe Yutaka  <gniibe@fsij.org>

	* fraucheky.c, usb-msc.c: Update with new USB API.

2016-06-01  NIIBE Yutaka  <gniibe@fsij.org>

	* fraucheky.c (fraucheky_setup_endpoints_for_interface): Call
	fraucheky_reset to let msc_handle_command return error and
	restart receiving command.

	* usb-msc.c (fraucheky_main_active): New.
	(fraucheky_main_done): Remove.
	* disk-on-rom.c (msc_scsi_stop): Use fraucheky_main_active.

2016-05-30  Niibe Yutaka  <gniibe@fsij.org>

	* disk-on-rom.c: Follow the change of Chopstx SYS API.

	* fraucheky.c: Follow the change of Chopstx USB	API.
	* usb-msc.c (EP6_IN_Callback): Likewise.

2015-07-31  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: Version 0.3.

2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* usb-msc.c (fraucheky_main): Clear fraucheky_main_done at end.
	* disk-on-rom.c (msc_scsi_write): Check fraucheky_enabled.

	* fraucheky.c (fraucheky_setup, fraucheky_get_descriptor): Follow
	the API change of USB driver.

2015-07-27  Niibe Yutaka  <gniibe@fsij.org>

	* configure (check_build_operating_system)