@@ -1,3 +1,8 @@
+2017-10-10  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* build.mk (ARG_BFDNAME): New.
+	(BFDNAME_OBJ): Remove.
+
 2017-07-07  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* usb-msc.c (msc_handle_command): Fix command error handling.
